My first commit

--- a/order-summary-capstone-project/order-summary-capstone-project/order-summary-component-main/index.html
+++ b/order-summary-capstone-project/order-summary-capstone-project/order-summary-component-main/index.html
@@ -21,6 +21,9 @@
   You can now listen to millions of songs, audiobooks, and podcasts on any 
   device anywhere you like!
 
+  <div class="card-row">
+    <img src="./images/icon-music.svg" alt="icon-music">
+  </div>
   Annual Plan
   $59.99/year
 
@@ -31,7 +34,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Group 24</a>.
   </div>
 </body>
 </html>
